--- a/app/src/main/res/layout/all_musicians_band_layout.xml
+++ b/app/src/main/res/layout/all_musicians_band_layout.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
+<androidx.cardview.widget.CardView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/white"
+    android:layout_margin="2dp"
+    android:elevation="5dp"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
-    android:layout_marginStart="15dp"
-    android:padding="10dp">
+    android:layout_marginStart="15dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/all_musicians_band_image_CIV"
@@ -34,6 +39,5 @@
 
     </LinearLayout>
 
-
-
 </LinearLayout>
+</androidx.cardview.widget.CardView>
