--- a/app/src/main/res/layout/widget_layout.xml
+++ b/app/src/main/res/layout/widget_layout.xml
@@ -2,6 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/instrumentsvoice"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -15,6 +16,7 @@
             android:layout_height="wrap_content"
             android:text="@string/events"
             android:textStyle="bold"
+            android:textColor="@color/white"
             android:textSize="20sp"/>
         <ListView
             android:id="@+id/widget_listView_LV"
@@ -29,6 +31,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:padding="10dp"
+        android:background="@color/colorPrimary"
         android:text="@string/empty_view_text"
         android:textColor="#ffffff"
         android:textSize="20sp"
