--- a/app/src/main/res/xml/event_app_widget_info.xml
+++ b/app/src/main/res/xml/event_app_widget_info.xml
@@ -4,7 +4,7 @@
     android:initialLayout="@layout/item_event_widget"
     android:minWidth="110dp"
     android:minHeight="110dp"
-    android:previewImage="@drawable/example_appwidget_preview"
+    android:previewImage="@drawable/logosmaller"
     android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="1800000"
     android:widgetCategory="home_screen"></appwidget-provider>
