--- a/app/src/main/res/layout/activity_find_musician.xml
+++ b/app/src/main/res/layout/activity_find_musician.xml
@@ -13,54 +13,85 @@
 
     </include>
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/find_musician_message_TV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
+        android:background="@color/white"
+        android:text="@string/you_need_to_belong_to_a_band"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/find_musician_appbar_layout" />
+
+    <ScrollView
+        android:id="@+id/find_musician_scrollView_SV"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:orientation="vertical"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/find_musician_appbar_layout">
 
-        <TextView
-            android:id="@+id/search_text_TV"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:text="@string/search_for_musicians_for_your_band"
-            android:textStyle="bold" />
-
-
-        <TextView
-            android:id="@+id/search_band_name_TV"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10sp"
-            android:text="@string/bands"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
-
-        <SearchView
-            android:id="@+id/find_musician_SV"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:background="@drawable/inputs" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/search_musician_RV"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp" />
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/find_musician_appbar_layout">
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/search_text_TV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:text="@string/search_for_musicians_for_your_band"
+                android:textStyle="bold" />
+
+
+            <TextView
+                android:id="@+id/search_band_name_TV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10sp"
+                android:text="@string/bands"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+
+            <SearchView
+                android:id="@+id/find_musician_SV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/inputs" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/search_musician_RV"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp" />
+
+        </LinearLayout>
+    </ScrollView>
 
 
 
