--- a/app/src/main/res/layout/all_events_layout.xml
+++ b/app/src/main/res/layout/all_events_layout.xml
@@ -1,72 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
     android:id="@+id/all_events_cardView_CV"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
-    android:elevation="5dp"
-    android:layout_margin="2dp"
-    android:layout_width="match_parent">
-
-<LinearLayout
-    android:orientation="vertical"
     android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+<LinearLayout android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="10dp">
+    android:orientation="horizontal"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_weight="7"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="10dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/all_events_type_TV"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/event_type"
+                    android:textColor="@color/black"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/all_events_name_TV"
+                    android:layout_width="9dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="3"
+                    android:text="@string/enter_a_name_for_your_event"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:contentDescription="@string/location"
+                    android:src="@drawable/ic_country" />
+
+                <TextView
+                    android:id="@+id/all_events_place_TV"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="3"
+                    android:text="@string/enter_a_place" />
+
+                <TextView
+                    android:id="@+id/all_events_date_TV"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:text="@string/enter_a_date" />
+
+                <TextView
+                    android:id="@+id/all_events_time_TV"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:text="12:00" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/all_events_playlist_TV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/playlists"
+                android:textStyle="bold" />
+        </LinearLayout>
+
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-    <TextView
-        android:id="@+id/all_events_type_TV"
+        android:id="@+id/all_events_edition"
         android:layout_width="0dp"
-        android:layout_weight="1"
-        android:text="@string/event_type"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:layout_height="wrap_content"/>
-    <TextView
-        android:id="@+id/all_events_name_TV"
-        android:layout_width="9dp"
-        android:layout_weight="3"
-        android:text="@string/enter_a_name_for_your_event"
-        android:textStyle="bold"
-        android:layout_height="wrap_content"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_weight=".5"
+        android:layout_gravity="center_vertical"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical">
         <ImageView
-            android:contentDescription="@string/location"
+            android:id="@+id/all_events_edit_IV"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:src="@drawable/ic_country"/>
-    <TextView
-        android:id="@+id/all_events_place_TV"
-        android:layout_width="0dp"
-        android:layout_weight="3"
-        android:text="@string/enter_a_place"
-        android:layout_height="wrap_content"/>
+            android:src="@drawable/ic_edit"/>
+        <ImageView
+            android:id="@+id/all_events_delete_IV"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:src="@drawable/ic_delete"/>
 
-        <TextView
-            android:id="@+id/all_events_date_TV"
-            android:layout_width="0dp"
-            android:text="@string/enter_a_date"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"/>
-        <TextView
-            android:id="@+id/all_events_time_TV"
-            android:layout_width="0dp"
-            android:text="12:00"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"/>
     </LinearLayout>
-    <TextView
-        android:id="@+id/all_events_playlist_TV"
-        android:layout_width="match_parent"
-        android:text="@string/playlists"
-        android:textStyle="bold"
-        android:layout_height="wrap_content"/>
-</LinearLayout>
 
+    </LinearLayout>
 </androidx.cardview.widget.CardView>
