--- a/app/src/main/res/layout/activity_create_event.xml
+++ b/app/src/main/res/layout/activity_create_event.xml
@@ -97,15 +97,31 @@
             android:background="@drawable/inputs"
             android:padding="10dp"/>
 
+        <LinearLayout
+            android:id="@+id/placeLL"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_below="@+id/create_event_name_ET">
+
         <EditText
             android:id="@+id/create_event_place_ET"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
+            android:layout_weight="6"
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
             android:hint="@string/enter_a_place"
             android:layout_below="@+id/create_event_name_ET"
             android:background="@drawable/inputs"
             android:padding="10dp"/>
+
+            <ImageView
+                android:id="@+id/google_maps_IV"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:src="@drawable/google_maps"/>
+        </LinearLayout>
 
         <Button
             android:id="@+id/create_event_select_playlist_BT"
@@ -115,7 +131,7 @@
             android:textColor="@color/white"
             android:textStyle="bold"
             android:text="@string/select_playlist"
-            android:layout_below="@+id/create_event_place_ET"/>
+            android:layout_below="@+id/placeLL"/>
 
         <EditText
             android:id="@+id/create_event_playlist_ET"
