--- a/app/src/main/res/layout/activity_band_profile.xml
+++ b/app/src/main/res/layout/activity_band_profile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/login"
+    android:background="@drawable/lightsmoke"
     tools:context=".SetUpActivity">
 
     <include
@@ -100,7 +100,7 @@
                 android:layout_marginEnd="8dp"
                 android:background="@drawable/inputs"
                 android:entries="@array/countries_array"
-                android:padding="0dp" />
+                android:padding="10dp" />
 
             <TextView
                 android:id="@+id/profile_where_do_you_live_TV"
@@ -108,6 +108,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginBottom="8dp"
+                android:textColor="@color/black"
                 android:text="@string/where_is_the_band_located"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
