--- a/app/src/main/res/layout/activity_musicians.xml
+++ b/app/src/main/res/layout/activity_musicians.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/lightsmoke"
     android:layout_height="match_parent">
 
     <include
@@ -46,10 +46,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/rockimage"
             android:orientation="vertical"
             tools:context=".MusiciansActivity">
-
 
             <TextView
                 android:id="@+id/all_musicians"
