--- a/app/src/main/res/layout/activity_update_event.xml
+++ b/app/src/main/res/layout/activity_update_event.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/lightsmoke"
     tools:context=".CreateEventActivity">
 
     <include
@@ -98,6 +99,7 @@
             android:padding="10dp"/>
 
         <LinearLayout
+            android:layout_marginTop="15dp"
             android:id="@+id/placeLL"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -124,6 +126,7 @@
         </LinearLayout>
 
         <Button
+            android:layout_marginTop="15dp"
             android:id="@+id/update_event_select_playlist_BT"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
