--- a/app/src/main/res/layout-v26/activity_reset_password.xml
+++ b/app/src/main/res/layout-v26/activity_reset_password.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ResetPasswordActivity"
-    android:background="@drawable/login">
+    android:background="@drawable/lightsmoke">
 
     <include
         android:id="@+id/reset_password_toolbar"
@@ -18,6 +18,8 @@
         android:layout_marginTop="24dp"
         android:text="@string/we_will_email_you_a_link_to_reset_your_password"
         android:textStyle="bold"
+        android:textSize="20sp"
+        android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/reset_password_toolbar" />
