--- a/app/src/main/res/layout-v26/activity_video_detail.xml
+++ b/app/src/main/res/layout-v26/activity_video_detail.xml
@@ -10,7 +10,7 @@
     android:layout_marginTop="8dp"
     android:layout_marginEnd="8dp"
     android:layout_marginBottom="8dp"
-    android:background="@drawable/instrumentsvoice"
+    android:background="@drawable/lightsmoke"
     android:orientation="vertical">
 
     <androidx.appcompat.widget.Toolbar
