--- a/app/src/main/res/layout/activity_click_instrument.xml
+++ b/app/src/main/res/layout/activity_click_instrument.xml
@@ -28,6 +28,9 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:text="@string/delete"
+        android:background="@drawable/buttons"
+        android:textColor="@color/white"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
