--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     android:layout_gravity="left"
     android:fitsSystemWindows="true"
+    android:background="@drawable/lightsmoke"
     tools:openDrawer="start">
 
     <LinearLayout
@@ -28,6 +29,7 @@
             android:text="@string/events"/>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:padding="10dp"
         android:id="@+id/main_events_RV"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
