--- a/app/src/main/res/layout/activity_my_bands.xml
+++ b/app/src/main/res/layout/activity_my_bands.xml
@@ -5,21 +5,29 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AddInstrumentActivity"
-    android:background="@drawable/instrumentsvoice">
+    android:background="@drawable/lightsmoke">
+
+    <include
+        android:id="@+id/my_bands_toolbar"
+        layout="@layout/app_bar_layout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:orientation="vertical"
+        android:padding="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:padding="5dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/my_bands_toolbar">
 
-        <include
-            android:id="@+id/my_bands_toolbar"
-            layout="@layout/app_bar_layout" />
 
         <TextView
             android:layout_width="match_parent"
@@ -32,7 +40,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/my_bands_added_RV"
             android:layout_width="match_parent"
-            android:layout_height="500dp"
+            android:layout_height="450dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp" />
