--- a/app/src/main/res/layout/activity_video_update_detail.xml
+++ b/app/src/main/res/layout/activity_video_update_detail.xml
@@ -9,7 +9,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:background="@drawable/instrumentsvoice"
+        android:background="@drawable/lightsmoke"
         android:layout_marginBottom="8dp"
         android:orientation="vertical">
 
