--- a/app/src/main/res/layout/all_events_layout.xml
+++ b/app/src/main/res/layout/all_events_layout.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    android:id="@+id/all_events_cardView_CV"
+<androidx.cardview.widget.CardView android:id="@+id/all_events_cardView_CV"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:elevation="5dp"
+    app:cardCornerRadius="5dp"
+    android:layout_margin="2dp"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 <LinearLayout android:layout_width="match_parent"
     android:layout_height="wrap_content"
