--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:background="@drawable/header"
+    android:background="@drawable/smoke"
     android:layout_height="200dp"
     android:padding="20dp"
     android:theme="@style/ThemeOverlay.AppCompat.Light">
@@ -16,16 +16,17 @@
         android:layout_marginTop="10dp"
         android:contentDescription="@string/user_image"
         android:src="@drawable/profile"
-        app:civ_border_color="#FF000000"
+        app:civ_border_color="#FFFFFF"
         app:civ_border_width="2dp" />
 
     <TextView
         android:id="@+id/nav_header_user_name_TV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/nav_header_user_image_CIV"
         android:layout_marginTop="2dp"
+        android:layout_toRightOf="@+id/nav_header_user_image_CIV"
         android:text="@string/gretel_hilbing"
+        android:layout_margin="20dp"
         android:textColor="@color/white"
         android:textStyle="bold"
         android:textAppearance="@style/TextAppearance.AppCompat.Large" />
@@ -36,9 +37,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
         android:layout_marginEnd="10dp"
-        android:layout_below="@+id/nav_header_user_name_TV"
+        android:textSize="30sp"
+        android:text="@string/bands"
+        android:layout_below="@+id/nav_header_user_image_CIV"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textStyle="bold" />
 
 
