--- a/app/src/main/res/layout/playlist_layout.xml
+++ b/app/src/main/res/layout/playlist_layout.xml
@@ -1,27 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="10dp">
+    android:layout_margin="2dp"
+    android:elevation="5dp"
+    app:cardCornerRadius="5dp">
 
-            <TextView
-                android:id="@+id/playlistNameTV"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/add_song"
-                android:textSize="12sp"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                android:textStyle="bold" />
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="10dp">
 
-            <TextView
-                android:id="@+id/playlistCreatorTV"
-                android:layout_width="match_parent"
-                android:textSize="12sp"
-                android:layout_height="wrap_content"
-                android:visibility="invisible"
-                android:text="@string/musicians"
-                android:textStyle="normal" />
-</LinearLayout>
+        <TextView
+            android:id="@+id/playlistNameTV"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/add_song"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textSize="12sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/playlistCreatorTV"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/musicians"
+            android:textSize="12sp"
+            android:textStyle="normal"
+            android:visibility="invisible" />
+    </LinearLayout>
+</androidx.cardview.widget.CardView>
 
 
