--- a/app/src/main/res/layout/song_layout.xml
+++ b/app/src/main/res/layout/song_layout.xml
@@ -1,54 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="wrap_content"
+    android:layout_margin="2dp"
+    android:elevation="5dp"
+    app:cardCornerRadius="5dp">
 
-    <LinearLayout
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="0dp"
-            android:layout_weight="8"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="8"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/songNameTV"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/add_song"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                    android:textSize="12sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/artistNameTV"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/musicians"
+                    android:textSize="12sp"
+                    android:textStyle="normal" />
+
+                <TextView
+                    android:id="@+id/youtubeUrlTV"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textSize="10sp" />
+            </LinearLayout>
+
 
             <TextView
-                android:id="@+id/songNameTV"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/add_song"
-                android:textSize="12sp"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                android:textStyle="bold" />
+                android:id="@+id/youtubeTV"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="3"
+                android:text=""
+                android:visibility="invisible" />
 
-            <TextView
-                android:id="@+id/artistNameTV"
-                android:layout_width="match_parent"
-                android:textSize="12sp"
-                android:layout_height="wrap_content"
-                android:text="@string/musicians"
-                android:textStyle="normal" />
 
-            <TextView
-                android:id="@+id/youtubeUrlTV"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textSize="10sp"/>
         </LinearLayout>
-
-
-        <TextView
-            android:id="@+id/youtubeTV"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="3"
-            android:visibility="invisible"
-            android:text="" />
-
-
     </LinearLayout>
-</LinearLayout>
+</androidx.cardview.widget.CardView>
